--- a/gunicorn.config
+++ b/gunicorn.config
@@ -1,2 +1,8 @@
-bind = "0.0.0.0:8080"
+import os
+
+bind = f"0.0.0.0:{os.getenv('PORT', '8080')}"
+
 workers = 2
+
+# Specify the WSGI application
+wsgi_app = "server:app"
