--- a/gunicorn.config
+++ b/gunicorn.config
@@ -3,3 +3,6 @@ import os
 bind = f"0.0.0.0:{os.getenv('PORT', '8080')}"
 
 workers = 2
+
+# Explicitly specify the Flask application module for environments that load via config
+wsgi_app = "server:app"
